k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauthservice
spec:
  type: NodePort
  selector:
    app: oauthservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9001
